--- a/SCME.UI/PagesCommon/ResultsPage.xaml
+++ b/SCME.UI/PagesCommon/ResultsPage.xaml
@@ -14,6 +14,7 @@
 
         <Style TargetType="{x:Type Label}">
             <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
+            <Setter Property="FontWeight" Value="ExtraLight" />
             <Setter Property="FontSize" Value="{StaticResource FontSize22}" />
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
