--- a/SCME.WpfControlLibrary/Styles/Button.xaml
+++ b/SCME.WpfControlLibrary/Styles/Button.xaml
@@ -39,7 +39,7 @@
     <Style x:Key="BaseFlatButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontSize" Value="36" />
-        <Setter Property="FontFamily" Value="Helvetica Neue LT Std"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="Height" Value="80" />
