--- a/SCME.WpfControlLibrary/Styles/Label.xaml
+++ b/SCME.WpfControlLibrary/Styles/Label.xaml
@@ -16,7 +16,7 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontFamily" Value="Helvetica Neue LT Std"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontWeight" Value="ExtraLight"/>
         <Setter Property="TextBlock.TextWrapping" Value="NoWrap"/>
         <Setter Property="ContentStringFormat" Value=""/>
