--- a/SCME.WpfControlLibrary/Styles/TextBlock.xaml
+++ b/SCME.WpfControlLibrary/Styles/TextBlock.xaml
@@ -9,7 +9,7 @@
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Opacity" Value="1"/>
         <Setter Property="Focusable" Value="False"/>
-        <Setter Property="FontFamily" Value="Helvetica Neue LT Std"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontWeight" Value="ExtraLight"/>
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="LineStackingStrategy" Value="BlockLineHeight"/>
