--- a/SCME.UI/MainWindow.xaml
+++ b/SCME.UI/MainWindow.xaml
@@ -117,7 +117,7 @@
                        HorizontalAlignment="Right" />
 
                     <StackPanel Grid.Column="3" Grid.Row="0" HorizontalAlignment="Right" Orientation="Horizontal">
-                        <Border Margin="0,5,15,5" Padding="10, 0, 10, 0"
+                        <Border Margin="0,5,-20,5" Padding="10, 0, 10, 0"
                             Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}">
                             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                 <Path x:Name="clampPath" Data="{StaticResource ClampPath}" Stroke="DarkSeaGreen"
@@ -139,7 +139,66 @@
                           StrokeThickness="4" VerticalAlignment="Center"
                           Stretch="UniformToFill" Margin="0, 10, 30, 10" 
                           Visibility="{Binding IsSafetyBreakIconVisible, Converter={StaticResource B2V}}" />
-                        <Grid VerticalAlignment="Center">
+                        <Label Background="Transparent" Margin="0,8,20,0">
+                            <Label.Style>
+                                <Style TargetType="Label">
+                                    <Setter Property="ToolTip" Value="Система безопасности выключена"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding SafetyMode}" Value="0">
+                                            <Setter Property="ToolTip" Value="Внутренний контур безопасности"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding SafetyMode}" Value="1">
+                                            <Setter Property="ToolTip" Value="Внешний контур безопасности"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Label.Style>
+                            <Path VerticalAlignment="Center" Width="48" Height="48" Stretch="Uniform" >
+                                <Path.Style>
+                                    <Style TargetType="Path">
+                                        <Setter Property="Data" Value="M19.43,19L21.5,21.11L20.12,22.5L18.03,20.41L15.91,22.53L14.5,21.11L16.61,19L14.5,16.86L15.88,15.47L18,17.59L20.12,15.47L21.55,16.9L19.43,19M21,11C21,11.9 20.9,12.78 20.71,13.65C20.13,13.35 19.5,13.15 18.81,13.05C18.93,12.45 19,11.83 19,11.22V6.3L12,3.18L5,6.3V11.22C5,15.54 8.25,20 12,21L12.31,20.91C12.5,21.53 12.83,22.11 13.22,22.62L12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11Z"/>
+                                        <Setter Property="Fill" Value="Red"/>
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding SafetyMode}" Value="0">
+                                                <Setter Property="Data" Value="M21,11C21,16.55 17.16,21.74 12,23C6.84,21.74 3,16.55 3,11V5L12,1L21,5V11M12,21C15.75,20 19,15.54 19,11.22V6.3L12,3.18V21Z"/>
+                                                <Setter Property="Fill" Value="Green"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding SafetyMode}" Value="1">
+                                                <Setter Property="Data" Value="M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z"/>
+                                                <Setter Property="Fill" Value="Green"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Path.Style>
+                            </Path>
+                        </Label>
+                        <StackPanel Margin="0,12,20,0">
+                            <Label Background="Transparent" HorizontalAlignment="Center">
+                                <Label.ToolTip>
+                                    <TextBlock>
+                                        Основные нововведения патча:
+                                        <LineBreak/>
+                                        <Run FontSize="16">1. Добавление обработки исключений при обновлении SCME.Agent</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">2. Добавление проектов, связанных с MEFA</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">3. Имплементация Heartbeat связи с сервером</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">4. Вывод сообщений об эмулируемых блоках</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">5. Отображение статуса связи с сервером</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">6. Исправление внешнего вида некоторых объектов интерфейса</Run>
+                                        <LineBreak/>
+                                        <Run FontSize="16">7. Очистка репозитория от неподдерживаемого кода</Run>
+                                    </TextBlock>
+                                </Label.ToolTip>
+                                <Path VerticalAlignment="Center" Width="48" Height="48" Stretch="Uniform" Fill="Black" Data="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"/>
+                            </Label>
+                            <TextBlock Text="{Binding Version}" HorizontalAlignment="Center" FontSize="10" />
+                        </StackPanel>
+
+                        <!--<Grid VerticalAlignment="Center">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
                                 <ColumnDefinition />
@@ -148,24 +207,20 @@
                                 <RowDefinition/>
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
-
                             <Label Content="{Binding SafetyMode}" Visibility="{Binding SafetyVisibility}" FontSize="24" Margin="0,0,30,0"/>
                             <Label Grid.Column="1"  Content="{Binding AccountName}"   FontSize="24" HorizontalAlignment="Left"
                            Visibility="{Binding AccountNameIsVisibility, Converter={StaticResource B2V}}"
                            VerticalContentAlignment="Center" Margin="0,0,30,0" />
-                        </Grid>
+                        </Grid>-->
 
                         <Button Click="Logout_Click"
                             Visibility="{Binding AccountButtonVisibility}"  Background="Transparent" BorderThickness="0"
                              Margin="0, 10, 30, 10" >
-                            <StackPanel >
-                                <Path  Width="48" Height="48" Stretch="uniform" Data="M 21.90666770935059 36.57333374023438 L 25.66666793823242 40.33333587646484 L 39 27 L 25.66666793823242 13.66666793823242 L 21.90666770935059 17.42666625976563 L 28.78666687011719 24.33333396911621 L 3 24.33333396911621 L 3 29.66666793823242 L 28.78666687011719 29.66666793823242 L 21.90666770935059 36.57333374023438 Z M 45.66666793823242 3 L 8.333333969116211 3 C 5.373332977294922 3 3 5.40000057220459 3 8.333333969116211 L 3 19 L 8.333333969116211 19 L 8.333333969116211 8.333333969116211 L 45.66666793823242 8.333333969116211 L 45.66666793823242 45.66666793823242 L 8.333333969116211 45.66666793823242 L 8.333333969116211 35 L 3 35 L 3 45.66666793823242 C 3 48.60000228881836 5.373332977294922 51 8.333333969116211 51 L 45.66666793823242 51 C 48.60000228881836 51 51 48.60000228881836 51 45.66666793823242 L 51 8.333333969116211 C 51 5.40000057220459 48.60000228881836 3 45.66666793823242 3 Z" Fill="#ffe05050" Stroke="Transparent" Canvas.Left="0" Canvas.Top="0"  />
-                                <TextBlock Text="{Binding Version}" HorizontalAlignment="Center" FontSize="10" />
-                            </StackPanel>
+                            <Path  Width="48" Height="48" Stretch="uniform" Data="M 21.90666770935059 36.57333374023438 L 25.66666793823242 40.33333587646484 L 39 27 L 25.66666793823242 13.66666793823242 L 21.90666770935059 17.42666625976563 L 28.78666687011719 24.33333396911621 L 3 24.33333396911621 L 3 29.66666793823242 L 28.78666687011719 29.66666793823242 L 21.90666770935059 36.57333374023438 Z M 45.66666793823242 3 L 8.333333969116211 3 C 5.373332977294922 3 3 5.40000057220459 3 8.333333969116211 L 3 19 L 8.333333969116211 19 L 8.333333969116211 8.333333969116211 L 45.66666793823242 8.333333969116211 L 45.66666793823242 45.66666793823242 L 8.333333969116211 45.66666793823242 L 8.333333969116211 35 L 3 35 L 3 45.66666793823242 C 3 48.60000228881836 5.373332977294922 51 8.333333969116211 51 L 45.66666793823242 51 C 48.60000228881836 51 51 48.60000228881836 51 45.66666793823242 L 51 8.333333969116211 C 51 5.40000057220459 48.60000228881836 3 45.66666793823242 3 Z" Fill="#ffe05050" Stroke="Transparent" Canvas.Left="0" Canvas.Top="0"  />
                         </Button>
                         <Button Click="Tech_Click"
                             Visibility="{Binding GoTechButtonVisibility}" Background="Transparent" BorderThickness="0"
-                            Margin="0, 10, 30, 10">
+                            Margin="-10, 10, 30, 10">
                             <Path  Width="49" Height="51" Stretch="uniform" Data="M 46.02697372436523 29.99900245666504 C 46.12897491455078 29.18300247192383 46.20547103881836 28.36699867248535 46.20547103881836 27.50000381469727 C 46.20547103881836 26.63300704956055 46.12896728515625 25.81700325012207 46.02697372436523 25.00100517272949 L 51.40747833251953 20.79350662231445 C 51.89197540283203 20.4110050201416 52.01947784423828 19.72250366210938 51.71347808837891 19.16150283813477 L 46.61347579956055 10.33850193023682 C 46.30747222900391 9.77750301361084 45.61897277832031 9.573503494262695 45.05797576904297 9.77750301361084 L 38.70847320556641 12.3275032043457 C 37.38247299194336 11.30750370025635 35.95447158813477 10.46600341796875 34.39897537231445 9.828503608703613 L 33.42996978759766 3.071001768112183 C 33.35346984863281 2.459000110626221 32.81797027587891 2 32.18046569824219 2 L 21.98046684265137 2 C 21.34296607971191 2 20.80746650695801 2.459000110626221 20.7309684753418 3.071000337600708 L 19.7619686126709 9.828502655029297 C 18.20646858215332 10.46600151062012 16.77846527099609 11.3330020904541 15.45246601104736 12.3275032043457 L 9.102964401245117 9.77750301361084 C 8.516465187072754 9.548001289367676 7.853464603424072 9.77750301361084 7.547464370727539 10.33850193023682 L 2.447463989257813 19.16150093078613 C 2.115963697433472 19.72249984741211 2.268963813781738 20.4109992980957 2.753463745117188 20.79350280761719 L 8.133965492248535 25.00100326538086 C 8.031964302062988 25.81700134277344 7.955463886260986 26.65850067138672 7.955463886260986 27.50000381469727 C 7.955463886260986 28.34150695800781 8.031964302062988 29.18300247192383 8.133965492248535 29.99900245666504 L 2.753463983535767 34.20650100708008 C 2.268963813781738 34.5890007019043 2.141463994979858 35.27750015258789 2.44746470451355 35.8385009765625 L 7.547465801239014 44.66150665283203 C 7.853464603424072 45.22250366210938 8.541965484619141 45.42650604248047 9.102965354919434 45.22250366210938 L 15.452467918396 42.67250442504883 C 16.77846717834473 43.69250106811523 18.20646858215332 44.53400039672852 19.76197052001953 45.1714973449707 L 20.73097038269043 51.92900085449219 C 20.80747032165527 52.54099655151367 21.34296989440918 53 21.98047065734863 53 L 32.18046951293945 53 C 32.81797027587891 53 33.35346984863281 52.54099655151367 33.42996978759766 51.92900085449219 L 34.39897537231445 45.1714973449707 C 35.95447158813477 44.53400039672852 37.38247299194336 43.6670036315918 38.70847320556641 42.67250442504883 L 45.05797576904297 45.22250366210938 C 45.64447402954102 45.45199966430664 46.30747222900391 45.22250366210938 46.61347579956055 44.66150665283203 L 51.71347808837891 35.8385009765625 C 52.01948547363281 35.27750015258789 51.89197540283203 34.58900451660156 51.40747833251953 34.20650100708008 L 46.02697372436523 29.99900245666504 Z M 27.08046913146973 36.42500686645508 C 22.15896797180176 36.42500686645508 18.15546607971191 32.42150115966797 18.15546607971191 27.50000381469727 C 18.15546607971191 22.5785026550293 22.15896797180176 18.57500267028809 27.08046913146973 18.57500267028809 C 32.00196838378906 18.57500267028809 36.00547027587891 22.5785026550293 36.00547027587891 27.50000381469727 C 36.00547027587891 32.42150115966797 32.00196838378906 36.42500686645508 27.08046913146973 36.42500686645508 Z" Fill="#ff0078d7" Stroke="Transparent" Canvas.Left="1205" Canvas.Top="11"  />
                         </Button>
                         <Button Content="{StaticResource ClosePath}" Click="BtnExit_Click"
