--- a/SCME.UI/PagesUser/LoginPage.xaml
+++ b/SCME.UI/PagesUser/LoginPage.xaml
@@ -1,77 +1,47 @@
 ﻿<Page x:Class="SCME.UI.PagesUser.LoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:res="clr-namespace:SCME.UI.Properties"
-      xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
-      xmlns:customControls="WpfControlLibrary"
       xmlns:ui="clr-namespace:SCME.UI"
-      mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
+      xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:customControls="WpfControlLibrary"
+      mc:Ignorable="d"
+      d:DesignWidth="1280" d:DesignHeight="944"
       x:Name="loginPage"
-      Title="{x:Static res:Resources.LoginPage_Title}" Loaded="LoginPage_Loaded">
+      Title="{x:Static res:Resources.LoginPage_Title}"
+      Loaded="LoginPage_Loaded">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="22*" />
-            <ColumnDefinition Width="75*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="28*" />
-            <RowDefinition Height="7*" />
-            <RowDefinition Height="7*" />
-            <RowDefinition Height="55*" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="28*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="28*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <Border Grid.Column="1" Grid.Row="0"
-                 Grid.RowSpan="5"
-                Background="{StaticResource xPurple1}"
-                Margin="0,0,0,0" />
-
-        <customControls:ListViewMouseLeftButtonScroll x:Name="accountsListBox" ScrollViewer.CanContentScroll="False"
-                                Grid.Column="0" Grid.Row="0" Grid.RowSpan="4" Style="{StaticResource DefaultListView}"
-                                SelectionChanged="AccountsListBox_OnSelectionChanged">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="22*"/>
+            <ColumnDefinition Width="75*"/>
+        </Grid.ColumnDefinitions>
+        <Border Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Background="#FFEDEDED"/>
+        <customControls:ListViewMouseLeftButtonScroll x:Name="accountsListBox" Style="{StaticResource DefaultListView}" Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" ScrollViewer.CanContentScroll="False" SelectionChanged="AccountsListBox_OnSelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="ui:CAccount">
-                    <Label Name="label" Content="{Binding Path=Name}" Foreground="{TemplateBinding TextBlock.Foreground}" />
+                    <Label Name="label" Content="{Binding Name}" Foreground="{TemplateBinding TextBlock.Foreground}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </customControls:ListViewMouseLeftButtonScroll>
-
-        <Label Grid.Column="1" Grid.Row="1"
-               Content="{x:Static res:Resources.EnterPassword}"
-               FontSize="36" Margin="120,0,0,0" />
-
-        <customControls:ValidatingTextBox x:Name="tbPassword" HorizontalContentAlignment="Center"
-                                Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center"
-                                FontSize="36" Margin="400,0,150,0" 
-                                 />
-
-        <Label x:Name="lblIncorrect"  Grid.Column="1" Grid.Row="2" 
-               Content="" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"
-               FontSize="18" Margin="400,0,150,0" Foreground="{StaticResource xOrange2}"/>
-
-        <Button x:Name="btn_Back" x:FieldModifier="private" Style="{StaticResource PrimaryButton}"
-                    Grid.Column="0" Grid.Row="4" 
-                    Content="{x:Static res:Resources.Back}"
-                    Click="btBack_OnClick"
-                     />
-
-
-        <Button x:Name="buttonNext" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}"
-                     Width="{Binding ElementName=btn_Back, Path=ActualWidth}"
-                    Content="{x:Static res:Resources.Next}"
-                    Click="ButtonNext_OnClick"
-                    Margin="0" />
-   
-
+        <Label Content="{x:Static res:Resources.EnterPassword}" Grid.Row="1" Grid.Column="1" Margin="120,0,0,0" FontSize="36"/>
+        <customControls:ValidatingTextBox x:Name="tbPassword" Grid.Row="1" Grid.Column="1" Margin="400,0,150,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="36"/>
+        <Label x:Name="lblIncorrect" Grid.Row="2" Grid.Column="1" Margin="400,0,150,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Top" Foreground="{StaticResource xOrange2}" FontSize="18"/>
+        <Button x:Name="btn_Back" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Back}" Grid.Row="4" Grid.Column="0" Click="BtBack_OnClick"/>
+        <Button x:Name="buttonNext" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Next}" Grid.Row="4" Grid.Column="1" Width="{Binding ActualWidth, ElementName=btn_Back}" HorizontalAlignment="Right" Click="ButtonNext_OnClick"/>
     </Grid>
 </Page>
