--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -1,15 +1,15 @@
 ﻿<UserControl x:Class="SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents.AddTestParameterUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:customControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:local="clr-namespace:SCME.WpfControlLibrary"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:profile="clr-namespace:SCME.Types.Profiles;assembly=SCME.Types"
-             xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:dataProviders="clr-namespace:SCME.WpfControlLibrary.DataProviders"
+             xmlns:customControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
              xmlns:pages="clr-namespace:SCME.WpfControlLibrary.Pages"
-             mc:Ignorable="d" d:DesignWidth="800" d:DataContext="{d:DesignInstance profile:ProfileDeepData}">
+             xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance profile:ProfileDeepData}"
+             d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -19,48 +19,30 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid >
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
-            <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-            <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+            <ColumnDefinition Width="Auto" SharedSizeGroup="Column0"/>
+            <ColumnDefinition Width="280" SharedSizeGroup="Column1"/>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="Auto" SharedSizeGroup="Column3"/>
+            <ColumnDefinition Width="280" SharedSizeGroup="Column4"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" Name="normRow"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="Auto" Name="normRow"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}" Margin="0,0,10,0"/>
-        <ComboBox Grid.Column="1" Grid.Row="0" Name="normComboBox" 
-                                      ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}"
-                                      SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" />
-        <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
-        <customControl:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding ParameterClamp}" />
-
-        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Height_Prof}"  />
-        <customControl:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding Height}"  />
-
-        <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Temp}" />
-        <customControl:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding Temperature}"/>
-
-        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.ParameterType}" 
-                   Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-        <ComboBox Grid.Column="1" Grid.Row="2" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
-                      ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" Height="{Binding ElementName=normComboBox, Path=ActualHeight}"
-                      DisplayMemberPath="Name" SelectedValuePath="TestParametersType" 
-                      SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
-        </ComboBox>
-        <Button Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2"  Style="{StaticResource PrimaryButton}" Height="{Binding ElementName=normComboBox, Path=ActualHeight}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
-                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Margin="0,5,0,5" Width="Auto"/>
-
-
-
-        <!--<CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
-                      Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>-->
-
+        <Label Grid.Row="0" Grid.Column="0" Content="{x:Static res:Resources.CommutationTypeT}" Margin="0,0,10,0" Foreground="Black"/>
+        <ComboBox x:Name="normComboBox" ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}" SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="0" Grid.Column="1"/>
+        <Label Content="{x:Static res:Resources.Force}" Grid.Row="0" Grid.Column="3" Foreground="Black"/>
+        <customControl:NumericUpDown Value="{Binding ParameterClamp}" Grid.Row="0" Grid.Column="4"/>
+        <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
+        <customControl:NumericUpDown Value="{Binding Height}" Grid.Row="1" Grid.Column="1"/>
+        <Label Content="{x:Static res:Resources.Temp}" Grid.Row="1" Grid.Column="3" Foreground="Black"/>
+        <customControl:NumericUpDown Value="{Binding Temperature}" Grid.Column="4" Grid.Row="1"/>
+        <Label Content="{x:Static res:Resources.ParameterType}" Grid.Row="2" Grid.Column="0" Foreground="Black" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
+        <ComboBox ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}" SelectedValuePath="TestParametersType" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" Height="{Binding ActualHeight, ElementName=normComboBox}" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
+        <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,5" Width="Auto" Height="{Binding ActualHeight, ElementName=normComboBox}" Background="#FF0078D7" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Click="AddTestParameters_Click"/>
     </Grid>
 </UserControl>
