--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
@@ -1,23 +1,16 @@
 ﻿<UserControl x:Class="SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents.ListViewTestParametersUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:mahappsControls="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:profilesPageComponents="clr-namespace:SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents"
-             xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:customControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:testResultDataTemplate="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
-             xmlns:baseTestParametersAndNormatives="clr-namespace:SCME.Types.BaseTestParams;assembly=SCME.Types"
-             xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types" 
-             xmlns:vtmParameters="clr-namespace:SCME.Types.VTM;assembly=SCME.Types" 
-             xmlns:bvtParameters="clr-namespace:SCME.Types.BVT;assembly=SCME.Types" 
-             xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:atuParameters="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
+             xmlns:bvtParameters="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
+             xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
+             xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types"
              xmlns:qrrTqParameters="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:touParameters="clr-namespace:SCME.Types.TOU;assembly=SCME.Types"
+             xmlns:vtmParameters="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
+             xmlns:testResultDataTemplate="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
              mc:Ignorable="d" Name="ThisListViewTestParametersUserControl"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -27,21 +20,19 @@
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/NumericUpDown.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ListViewItemTestParameter.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/DataTemplateForTestParameters.xaml"/>
-                
-                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <ListView BorderThickness="0"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False"
-              ItemContainerStyle="{StaticResource ListViewItemTestParameter}" ItemsSource="{Binding Path=ItemSource, ElementName=ThisListViewTestParametersUserControl}" Background="{StaticResource ListViewTestParametersBrush}" >
+    <ListView BorderThickness="0" Background="#FFEDEDED" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False"
+              ItemContainerStyle="{StaticResource ListViewItemTestParameter}" ItemsSource="{Binding Path=ItemSource, ElementName=ThisListViewTestParametersUserControl}">
       <ListView.ItemsPanel>
           <ItemsPanelTemplate>
                     <StackPanel />
             </ItemsPanelTemplate>
         </ListView.ItemsPanel>
         <ListView.Resources>
-            <DataTemplate DataType="{x:Type gateParameters:TestParameters}" >
-                <testResultDataTemplate:GateDataTemplate />
+            <DataTemplate DataType="{x:Type gateParameters:TestParameters}">
+                <testResultDataTemplate:GateDataTemplate/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type vtmParameters:TestParameters}" >
                 <testResultDataTemplate:VTMDataTemplate/>
