--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -18,11 +18,11 @@
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column0c" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column1c"/>
         <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column3c" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column4c"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
         <RowDefinition Height="auto" />
@@ -38,35 +38,35 @@
 
     </Grid.RowDefinitions>
 
-    <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" />
+    <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" Foreground="Black"/>
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource BvtTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TestType}" />
-    <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
+    <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}"  Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding CurrentLimit }" StringFormat="{}{0:N0}"/>
 
-    <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
+    <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}"  Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding VoltageLimitD }" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}" />
-    <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
+    <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding VoltageLimitR}" Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}" />
 
-    <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
+    <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}"  Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding PlateTime}" />
-    <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
+    <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}"  Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding RampUpVoltage}" />
 
-    <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
+    <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}"  Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding StartVoltage}" />
-    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
+    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}"  Foreground="Black"/>
     <ComboBox Grid.Column="4" Grid.Row="3" ItemsSource="{Binding Source={StaticResource VoltageFrequency}}" SelectedValue="{Binding VoltageFrequency}" />
 
-    <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
+    <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}"  Foreground="Black"/>
     <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding FrequencyDivisor}" />
 
-    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
+    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Mode}"  Foreground="Black"/>
     <ComboBox Grid.Column="4" Grid.Row="4" ItemsSource="{Binding Source={StaticResource BvtMeasurementModes}}"
               DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding MeasurementMode}" />
 
 
-    <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.MinVdrm_V}">
+    <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.MinVdrm_V}"  Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Vdrm2V}">
                 <Binding Path="MeasurementMode" />
@@ -83,7 +83,7 @@
         </customControls:NumericUpDown.Visibility>
     </customControls:NumericUpDown>
 
-    <Label Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.MinVrrm_V}" >
+    <Label Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.MinVrrm_V}"  Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Vrrm2V}">
                 <Binding Path="MeasurementMode" />
@@ -101,7 +101,7 @@
     </customControls:NumericUpDown>
 
 
-    <Label Grid.Column="0" Grid.Row="7" Content="{x:Static res:Resources.MaxIdrm_mA}">
+    <Label Grid.Column="0" Grid.Row="7" Content="{x:Static res:Resources.MaxIdrm_mA}"  Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Idrm2V}">
                 <Binding Path="MeasurementMode" />
@@ -118,7 +118,7 @@
         </customControls:NumericUpDown.Visibility>
     </customControls:NumericUpDown>
 
-    <Label Grid.Column="3" Grid.Row="7" Content="{x:Static res:Resources.MaxIrrm_mA}">
+    <Label Grid.Column="3" Grid.Row="7" Content="{x:Static res:Resources.MaxIrrm_mA}"  Foreground="Black">
         <Label.Visibility>
             <MultiBinding Converter="{StaticResource Irrm2V}">
                 <Binding Path="MeasurementMode" />
@@ -136,7 +136,7 @@
     </customControls:NumericUpDown>
 
 
-    <CheckBox Grid.Column="0" Margin="5,5,5,0" Grid.Row="8" Grid.ColumnSpan="2"  Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}" />
+    <CheckBox Grid.Column="0" Margin="5,5,5,0" Grid.Row="8" Grid.ColumnSpan="2"  Content="{x:Static res:Resources.UseUdsmUrsm}" IsChecked="{Binding UseUdsmUrsm}"  Foreground="Black" BorderBrush="#FFC9C9C9"/>
 
 
    
