--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -14,16 +14,15 @@
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="Auto" SharedSizeGroup="Column0b" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column1b"/>
         <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+        <ColumnDefinition Width="Auto" SharedSizeGroup="Column3b" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column4b"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -34,27 +33,27 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}"/>
-        <CheckBox Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingCurrent}"  IsChecked="{Binding IsIhEnabled}"/>
+    <CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <CheckBox Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingCurrent}"  IsChecked="{Binding IsIhEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
 
-        <Label Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Content="{x:Static res:Resources.IHItm}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}"/>
+        <Label Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Content="{x:Static res:Resources.IHItm}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding IGT}" StringFormat="{}{0:N0}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}"/>
-        
-        <CheckBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingStrikeCurrent}" IsChecked="{Binding IsIhStrikeCurrentEnabled}" />
-        <CheckBox Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.LatchingCurrent}" IsChecked="{Binding IsIlEnabled}"  />
 
-        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxResistance_Ohm}" />
+    <CheckBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingStrikeCurrent}" IsChecked="{Binding IsIhStrikeCurrentEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <CheckBox Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.LatchingCurrent}" IsChecked="{Binding IsIlEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"  />
+
+    <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxResistance_Ohm}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding Resistance}" StringFormat="{}{0:N0}"/>
-        <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" />
+    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" Foreground="Black"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Value="{Binding VGT }" StringFormat="{}{0:N1}"/>
 
-        <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MinIgt_mA}" />
+    <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MinIgt_mA}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding MinIGT}" StringFormat="{}{0:N0}"/>
-        <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.MaxIgt_mA}" />
+    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.MaxIgt_mA}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Value="{Binding IGT}" StringFormat="{}{0:N0}"/>
 
-    <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MaxIh_mA}" />
+    <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MaxIh_mA}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="5" Value="{Binding IH }" StringFormat="{}{0:N0}"/>
-        <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MaxIl_mA}" />
+        <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MaxIl_mA}" Foreground="Black"/>
         <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Value="{Binding IL}" StringFormat="{}{0:N0}"/>
 </Grid>
