--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
@@ -18,11 +18,11 @@
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column0e" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column1e"/>
         <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
+        <ColumnDefinition Width="auto" SharedSizeGroup="Column3e" />
+        <ColumnDefinition Width="220" SharedSizeGroup="Column4e"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
         <RowDefinition Height="*" />
@@ -35,27 +35,27 @@
         <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
-    <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.QrrTqMode}" />
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.QrrTqMode}" />
     <ComboBox Grid.Column="4" Grid.Row="0" ItemsSource="{Binding Source={StaticResource TModes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding Mode}" />
 
-     <CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"  Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}" />
+    <CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"  Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" IsChecked="{Binding TrrMeasureBy9050Method}" Foreground="Black" BorderBrush="#FFC9C9C9"/>
 
-    <TextBlock Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Name="WidthTemplate" Text="{x:Static res:Resources.QrrTqDirectCurrent}" /> 
+    <TextBlock Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Name="WidthTemplate" Text="{x:Static res:Resources.QrrTqDirectCurrent}" Foreground="Black"/> 
      <customControls:NumericUpDown Grid.Column="4" Grid.Row="2" Value="{Binding DirectCurrent}" /> 
     
-    <Label Grid.Column="0" Grid.Row="3"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCPulseWidth}" /> 
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="3"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCPulseWidth}" /> 
      <customControls:NumericUpDown Grid.Column="4" Grid.Row="3" Value="{Binding DCPulseWidth}" /> 
     
-    <Label Grid.Column="0" Grid.Row="4"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCRiseRate}" /> 
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="4"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCRiseRate}" /> 
      <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Value="{Binding DCRiseRate}" StringFormat="N3" /> 
     
-    <Label Grid.Column="0" Grid.Row="5"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCFallRate}" /> 
+    <Label Foreground="Black" Grid.Column="0" Grid.Row="5"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqDCFallRate}" /> 
      <ComboBox Grid.Column="4" Grid.Row="5"  ItemsSource="{Binding Source={StaticResource TDcFallRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding DCFallRate}" /> 
     
-     <Label Grid.Column="0" Grid.Row="6"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" /> 
+     <Label Foreground="Black" Grid.Column="0" Grid.Row="6"  Grid.ColumnSpan="4" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" /> 
      <customControls:NumericUpDown Grid.Column="4" Grid.Row="6" Value="{Binding OffStateVoltage}" />
 
 
-    <TextBlock Grid.Column="0" Grid.Row="7"  Grid.ColumnSpan="4" TextWrapping="Wrap" HorizontalAlignment="Left" Width="{Binding ElementName=WidthTemplate, Path=ActualWidth}" Text="{x:Static res:Resources.QrrTqOsvRate}"  />
+    <TextBlock Grid.Column="0" Grid.Row="7" Foreground="Black" Grid.ColumnSpan="4" TextWrapping="Wrap" HorizontalAlignment="Left" Width="{Binding ElementName=WidthTemplate, Path=ActualWidth}" Text="{x:Static res:Resources.QrrTqOsvRate}"  />
     <ComboBox Grid.Column="4" Grid.Row="7"  ItemsSource="{Binding Source={StaticResource TOsvRates}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding OsvRate}" />
 </Grid>
